# pgf-formatter

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  test.yml
docs/: index.md
search/: search_index.json
src/pgf_formatter/: formatter.py
