[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgf-formatter"
description = "Embedding PDF images in Jupyter notebooks"
readme = "README.md"
license = "MIT"
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["matplotlib", "ipython"]

[project.urls]
Documentation = "https://github.com/daizutabi/pgf-formatter#readme" # FIXME
Source = "https://github.com/daizutabi/pgf-formatter"
Issues = "https://github.com/daizutabi/pgf-formatter/issues"

[tool.hatch.version]
path = "src/pgf_formatter/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]
[tool.hatch.build.targets.wheel]
packages = ["src/pgf_formatter"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default]
dependencies = ["pytest-cov"]
[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes",
  "--doctest-modules",
  "--cov=pgf_formatter",
  "--cov-report=term:skip-covered",
  "--cov-report=lcov:lcov.info",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
testpaths = ["tests", "src/pgf_formatter"]

[tool.coverage.run]
omit = ["src/pgf_formatter/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["pgf_formatter"]

[tool.ruff.lint]
unfixable = [
  "RUF100", # Don't touch noqa lines
]
